fix styling of email form so that button is on the same row on mobile as well

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,7 @@ input[type="email"] {
 	border-radius: 5px;
 	border: none;
 	margin-bottom: 10px;
-	width: 90%;
+	width: 60%;
 	max-width: 400px;
 	background-color: #f2f2f2;
 	color: #333;
